--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Calendar API</title>
     </head>
     <body>
-        <div id="app"></div>
+        <main class="main">
+            <div id="app"></div>
+        </main>
     </body>
 </html>
